# sumy

./: .gitignore  .license_template  Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json  rustfmt.toml
.github/workflows/: check.yaml
src/: lib.rs
