# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sumy"
version = "0.1.0"
authors = ["Fuwn"]
edition = "2021"
description = "Node.js Bindings to Germ"
readme = "README.md"
homepage = "https://github.com/gemrest/sumy"
repository = "https://github.com/gemrest/sumy"
license = "GPL-3.0-only"
keywords = ["gemrest", "gemini"]
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10", default-features = false, features = ["napi-6"] }
germ = { version = "0.3.3", default-features = false, features = ["convert", "request"] }
url = "2.2.2"
